Fix navbar spacing and hr design

--- a/src/client/public/css/body.styl
+++ b/src/client/public/css/body.styl
@@ -16,7 +16,7 @@ progress {
     display block
 }
 hr {
-    border-top none
+    border none
     border-bottom 1px solid rgba(25, 118, 210, .2)
 }
 .react-sidebar-content {
